# permission-hook

./: .gitignore  Cargo.toml  HANDOVER.md  PLAN.md  README.md  config.example.json  hooks.example.json  install.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
src/: analyzer.rs  audio.rs  config.rs  dedup.rs  jsonl.rs  lib.rs  logging.rs  main.rs  notifier.rs  permission.rs  platform.rs  state.rs  summary.rs  update.rs  webhook.rs
tests/: test_hook.ps1  test_hook2.ps1
