[package]
name = "claude-permission-hook"
version = "1.0.5"
edition = "2021"
description = "Fast permission hook for Claude Code and other AI coding assistants"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
chrono = "0.4"
dirs = "5.0"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }  # For LLM API calls
notify-rust = "4"  # Desktop notifications
rodio = { version = "0.19", optional = true }  # Audio playback (optional)

[features]
default = []
sound = ["rodio"]

[dev-dependencies]
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
